--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,7 @@ repository = "https://github.com/kardeiz/jp2k"
 
 [dependencies]
 libc = "0.2"
-
-[build-dependencies]
-bindgen = "0.51"
-pkg-config = "0.3.16"
-
+openjpeg-sys = { git = "https://github.com/dskkato/openjpeg-sys", branch = "dev" }
 
 [dev-dependencies]
 image = "0.23"
-stopwatch = "0.0.7"
-env_logger = "0.7.0"
-
-
-[features]
-docs-rs = []
-
-[package.metadata.docs.rs]
-features = ["docs-rs"]
