--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 repository = "https://github.com/kardeiz/jp2k"
 
 [dependencies]
-openjpeg-sys = { git = "https://github.com/dskkato/openjpeg-sys", branch = "dev" }
+openjpeg-sys = { git = "https://github.com/dskkato/openjpeg-sys" }
 
 [dev-dependencies]
 image = "0.23"
