--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 repository = "https://github.com/kardeiz/jp2k"
 
 [dependencies]
-openjpeg-sys = { git = "https://github.com/dskkato/openjpeg-sys" }
+openjpeg-sys = "1.0.7"
 
 [dev-dependencies]
-image = "0.23"
+image = "0.24"
